--- a/style.css
+++ b/style.css
@@ -1,162 +1,265 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+/* :root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+} */
 
 header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;     
-  background-image: url('public/assets/iteration-1/home-banner.png');
-  min-height: 100vh;  
-  width: 100%; 
-  text-align: center;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  column-gap: 0;
-  flex-shrink: 0;
-}
-
-header img {
-  margin: 0 auto;
-  padding-top: 2rem;
-}
-
-header p {
-  font-family: Satisfy;
-  font-style: regular;
-  font-size: 32px;
-  color: #FDC913;
-  padding-top: 2rem;
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('public/assets/iteration-1/home-banner.png');
+    min-height: 100vh;
+    width: 100%;
+    text-align: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    column-gap: 0;
+    flex-shrink: 0;
 }
 
 header h1 {
-  font-family: "Roboto Condensed";
-  font-style: light;
-  font-size: 6rem;
-  color: #FFFFFF;
-  margin: 0;
-  padding: 0;
+    font-family: "Roboto Condensed";
+    font-weight: 300;
+    font-size: 5rem;
+    color: #FFFFFF;
+    margin: 0;
+    padding: 0;
 }
 
-.btn {
-  border-radius: 50px;
-  background-color: #FDC913;
-  color: #FFFFFF;
-  border: none;
+header img {
+    margin: 0 auto;
+    padding-top: 1.75rem;
 }
 
-.btn:hover {
-  color: #FDC913;
-  background-color: #FFFFFF;
-}
-
-main {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.icons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 2rem;
-  width: 100%;
-  align-items: center;
-  padding: 1rem 0;
-}
-
-
-body {
-  margin: 0 auto;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+header p {
+    font-family: Satisfy;
+    font-style: regular;
+    font-size: 2rem;
+    color: #FDC913;
+    padding-top: 2rem;
+    margin: 0;
+    gap: 10px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: Barlow;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+    border-color: #646cff;
 }
+
+header .btn {
+    border-radius: 50px;
+    background-color: #FDC913;
+    color: #FFFFFF;
+    border: none;
+}
+
+header .btn:hover {
+    color: #FDC913;
+    background-color: #FFFFFF;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 90%;
+    margin: 0 426px;
+    padding: 1.25rem 0;
+    gap: 3rem;
+}
+
+.icons-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.75rem;
+    cursor: pointer;
+}
+
+body {
+    margin: 0 auto;
+    min-width: 320px;
+    min-height: 100vh;
+}
+
+main {
+    background-color: #FAF7F2;
+}
+
+.promo {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    padding-top: 5rem;
+    font-family: Barlow;
+}
+
+.promo-card {
+    position: relative;
+}
+
+.large-card {
+    display: flex;
+    height: 100%;
+}
+
+.l-concent {
+    position: absolute;
+    font-weight: bold;
+    font-size: 1.5rem;
+    top: 3rem;
+    left: 3rem;
+    bottom: auto;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.75rem;
+}
+
+.l-concent h2 {
+    font-family: Quattrocento;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.promo-small {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0.5rem;
+}
+
+.promo-card img {
+    border-radius: 12px;
+}
+
+.promo-content {
+    position: absolute;
+    left: 2rem;
+    bottom: 2rem;
+    color: #fff;
+}
+
+.promo-content h2 {
+    margin: 0;
+    font-size: 1.75rem;
+}
+
+.promo-content p {
+    margin: 0.75rem 0;
+}
+
+.promo-btn {
+    padding: 0.5rem 1.5rem;
+    border-radius: 1rem;
+    border: none;
+    background: #fff;
+    color: #d62828;
+    font-family: Barlow;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 1rem;
+}
+
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
+}
+
+#app {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
+
+.logo {
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
+}
+
+.logo:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+.logo.vanilla:hover {
+    filter: drop-shadow(0 0 2em #f7df1eaa);
+}
+
+.card {
+    padding: 2em;
+}
+
+.read-the-docs {
+    color: #888;
+}
+
+button {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+
+button:hover {
+    border-color: #646cff;
+}
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+    outline: 4px auto -webkit-focus-ring-color;
 }
 
-
+footer {
+    background-color: #292929;
+    height: 40vh;
+    width: 100%;
+}
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+     :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+    a:hover {
+        color: #747bff;
+    }
+    button {
+        background-color: #f9f9f9;
+    }
 }
