--- a/style.css
+++ b/style.css
@@ -87,12 +87,12 @@ header .btn:hover {
 
 .icons {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    max-width: 90%;
-    margin: 0 426px;
     padding: 1.25rem 0;
-    gap: 3rem;
+    max-width: 900px;
+    margin: 0 auto;
+    font-family: Barlow;
 }
 
 .icons-item {
@@ -123,6 +123,7 @@ main {
 
 .promo-card {
     position: relative;
+    width: 450px;
 }
 
 .large-card {
@@ -133,7 +134,7 @@ main {
 .l-concent {
     position: absolute;
     font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 1rem;
     top: 3rem;
     left: 3rem;
     bottom: auto;
@@ -146,7 +147,7 @@ main {
 
 .l-concent h2 {
     font-family: Quattrocento;
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: 700;
 }
 
@@ -159,6 +160,7 @@ main {
 
 .promo-card img {
     border-radius: 12px;
+    width: 100%;
 }
 
 .promo-content {
@@ -189,9 +191,75 @@ main {
     margin: 1rem;
 }
 
+.promo-btn:hover {
+    opacity: 0.85;
+}
+
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+}
+
+.subtitle p {
+    font-family: Satisfy;
+    color: #d62828;
+    font-size: 2rem;
+}
+
+.subtitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem;
+}
+
+.subtitle h1 {
+    font-family: Barlow;
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+
+.categories {
+    20p display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+.category-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.category-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    background: #FFFFFF;
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    font-size: 0.75rem;
+    cursor: pointer;
+}
+
+.category-item img {
+    width: 42px;
+    height: 42px;
+}
+
+.active {
+    background: black;
+    color: white;
+}
+
+.category-item:hover {
+    opacity: 0.85;
 }
 
 #app {
